createResume and refine others

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # .env file
 TELEGRAM_TOKEN=6572834738:AAHgIGcYe0Tmu3-xcXf6brR4WjjO1jSwuC0
-MONGO_URI=mongodb+srv://inf2003-database-grp34:db123@cluster0.9hn8y0z.mongodb.net/JOBIFY?retryWrites=true&w=majority
+# MONGO_URI=mongodb://mongo:27017/telebot
+MONGO_URI=mongodb+srv://inf2003-database-grp34:db123@jobifytelebot.atvq7re.mongodb.net/JobifyTelebot?retryWrites=true&w=majority
