--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "checkResumes": "node src/scripts/checkResumes.js",
     "checkSessions": "node src/scripts/checkSessions.js",
     "checkJobs": "node src/scripts/checkJobs.js",
-    "checkAll": "node ./src/scripts/checkCompanies.js && node ./src/scripts/checkProfiles.js && node ./src/scripts/checkUsers.js && node src/scripts/checkSessions.js && node src/scripts/checkResumes.js ",
-    "delAll": "node ./src/scripts/deleteMongoDB.js && node src/scripts/checkJobs.js && del src\\database\\sql\\database.sqlite",
+    "checkAll": "node ./src/scripts/checkCompanies.js && node ./src/scripts/checkProfiles.js && node ./src/scripts/checkUsers.js && node src/scripts/checkSessions.js && node src/scripts/checkJobs.js && node src/scripts/checkResumes.js ",
+    "delAll": "node ./src/scripts/deleteMongoDB.js && del src\\database\\sql\\database.sqlite",
     "delNoSql": "node ./src/scripts/deleteMongoDB.js",
     "delSql": "del src\\database\\sql\\database.sqlite"
   },
