--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
     "start": "node src/bot/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "checkCompanies": "node ./src/scripts/checkCompanies.js",
-    "checkProfiles": "node ./src/scripts/checkProfiles.js",
+    "checkApplicants": "node ./src/scripts/checkApplicants.js",
+    "checkApplicantSkills": "node ./src/scripts/checkApplicantSkills.js",
     "checkUsers": "node ./src/scripts/checkUsers.js",
     "checkResumes": "node src/scripts/checkResumes.js",
     "checkSessions": "node src/scripts/checkSessions.js",
     "checkJobs": "node src/scripts/checkJobs.js",
-    "checkAll": "node ./src/scripts/checkCompanies.js && node ./src/scripts/checkProfiles.js && node ./src/scripts/checkUsers.js && node src/scripts/checkSessions.js && node src/scripts/checkJobs.js && node src/scripts/checkResumes.js ",
+    "checkJobSkills": "node src/scripts/checkJobSkills.js",
+    "checkAll": "node src/scripts/checkAll.js",
     "delAll": "node ./src/scripts/deleteMongoDB.js && del src\\database\\sql\\database.sqlite",
     "delNoSql": "node ./src/scripts/deleteMongoDB.js",
-    "delSql": "del src\\database\\sql\\database.sqlite"
+    "delSql": "del src\\database\\sql\\database.sqlite",
+    "populateDB": "node src/scripts/populateDB.js",
+    "resetDB": "node ./src/scripts/deleteMongoDB.js && del src\\database\\sql\\database.sqlite && node src/scripts/checkAll.js && node ./src/scripts/populateDB.js"
   },
   "author": "waafi-adam",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "csv-parse": "^5.5.2",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.0",
     "node-telegram-bot-api": "^0.64.0",
