added 3000 rows of datasets and testing

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 # ris: 6171820961:AAFnNoETC9HNOgwHuIv4o_iUXZyuSufzXX0
 TELEGRAM_TOKEN=6572834738:AAHgIGcYe0Tmu3-xcXf6brR4WjjO1jSwuC0
 MONGO_URI=mongodb+srv://inf2003-database-grp34:db123@jobifytelebot.atvq7re.mongodb.net/JobifyTelebot?retryWrites=true&w=majority
+MONGO_URI_REJECT=mongodb+srv://inf2003-database-grp34-reject:db123-reject@cluster0.unsedbo.mongodb.net/JobifyTelebotReject?retryWrites=true&w=majority
