--- a/package.json
+++ b/package.json
@@ -6,20 +6,12 @@
   "scripts": {
     "start": "node src/bot/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "checkCompanies": "node ./src/scripts/checkCompanies.js",
-    "checkApplicants": "node ./src/scripts/checkApplicants.js",
-    "checkApplicantSkills": "node ./src/scripts/checkApplicantSkills.js",
-    "checkUsers": "node ./src/scripts/checkUsers.js",
-    "checkResumes": "node src/scripts/checkResumes.js",
-    "checkSessions": "node src/scripts/checkSessions.js",
-    "checkJobs": "node src/scripts/checkJobs.js",
-    "checkJobSkills": "node src/scripts/checkJobSkills.js",
-    "checkAll": "node src/scripts/checkAll.js",
-    "delAll": "node ./src/scripts/deleteMongoDB.js && del src\\database\\sql\\database.sqlite",
-    "delNoSql": "node ./src/scripts/deleteMongoDB.js",
-    "delSql": "del src\\database\\sql\\database.sqlite",
-    "populateDB": "node src/scripts/populateDB.js",
-    "resetDB": "node ./src/scripts/deleteMongoDB.js && del src\\database\\sql\\database.sqlite && node src/scripts/checkAll.js && node ./src/scripts/populateDB.js"
+    "checkAll": "node src/scripts/checkAll.js && node src/scripts/checkAll_reject.js",
+    "delAll": "node ./src/scripts/deleteMongoDB.js && node ./src/scripts/deleteMongoDB_reject.js && del src\\database\\sql\\sqlDB.sqlite && del src\\database_rejected\\sql\\sqlDB_rejected.sqlite",
+    "populateDB": "node src/scripts/populateDB.js && node src/scripts/populateDB_reject.js",
+    "resetDB": "node ./src/scripts/deleteMongoDB.js && node ./src/scripts/deleteMongoDB_reject.js && del src\\database_rejected\\sql\\sqlDB_rejected.sqlite && del src\\database\\sql\\sqlDB.sqlite && node src/scripts/checkAll.js && node src/scripts/checkAll_Reject.js && node ./src/scripts/populateDB.js && node ./src/scripts/populateDB_reject.js",
+    "testTime": "node src/scripts/testTimeIndexed.js && node src/scripts/testTimeNonIndexed.js",
+    "testTime2": "node src/scripts/testTimeNonIndexed.js && node src/scripts/testTimeIndexed.js"
   },
   "author": "waafi-adam",
   "license": "ISC",
